src/Avatar/_avatar.scss
.swf-avatar {
  --color-for-border: #fff;
  --size-s: 1.5rem;
  --size-m: 2rem;
  --size-l: 2.5rem;

  min-width: 1.5rem;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  box-shadow: 0 0 0 2pt var(--color-for-border);
  font-size: .7rem;

  display: flex;
  justify-content: flex-start;
  align-items: center;
  transition: max-width 0.3s linear, width 0.3s linear, border-radius 1s linear;
  overflow: hidden;

  &.--default {
    background-color: #e0e0e0;
  }

  &.--primary {
    color: #fff;
    background-color: #1976d2;
  }

  &.--negative {
    color: #fff;
    background-color: rgb(220, 0, 78);
  }

  &.--clickable:hover {
    cursor: pointer;
    transform: scale(1.2);
  }

  &.--xs {
    min-width: var(--size-s);
    width: var(--size-s);
    height: var(--size-s);
    font-size: 0.85rem;

    &.--selected {
      width: 8rem;
      border-radius: 1rem;
      font-size: 0.6rem;
      max-width: 130px !important;
    }
  }

  &.--md {
    min-width: var(--size-m);
    width: var(--size-m);
    height: var(--size-m);
  }

  &.--lg {
    min-width: var(--size-l);
    width: var(--size-l);
    height: var(--size-l);
  }

  &.--selected {
    z-index: 2;
    transition: max-width 0.3s linear, width 0.3s linear;
    padding: 10px 10px 10px 0;
    width: 9rem;
    border-radius: 1.3rem;
    font-size: 0.7rem;
    max-width: 150px;
  }

  .photo-container {
    border-radius: 50%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: inherit;
    width: auto;
    height: inherit;

    .member-photo {
      height: 1.5rem;
    }
  }

  .member-container {
    display: flex;
    align-items: center;
    justify-content: center;
    min-width: inherit;
    width: auto;
    height: inherit;
    color: #000;
    background: lightgray;
    border-radius: 50%;
    font-size: 1rem;

    p.initials {
      color: black;
      margin: 0;
    }
  }

  .member-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-left: 5px;
    overflow: hidden;
    width: 100%;
    visibility: hidden;

    .name,
    .title {

      margin: 0;
      transform: translateX(-120%);
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      animation: 0.2s ease-in 0s 1 normal forwards position;
      @keyframes position {
        100% {
          transform: translateX(0);
        }
      }
    }
  }

  .remove {
    transform: scale(1);
    transition: all .08s ease-in-out;
    visibility: hidden;
    &:hover {
      transform: scale(1.2);
      color: #1a4aa4;
    }
  }

  .visible {
    visibility: visible;
  }
}

